Fix icons directory and directory choosing dialog